--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Diety — Ninox Antolihao</title>
-  <meta name="description" content="A Gnostic Reflection on the True Divine — by Ninox Antolihao">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>The Diety — Read</title>
+  <meta name="description" content="A quiet invitation to stillness and presence.">
   <link rel="icon" href="/reflections/assets/favicon.ico">
-
-  <!-- Open Graph (for sharing) -->
-  <meta property="og:title" content="The Diety — A Gnostic Reflection on the True Divine">
-  <meta property="og:description" content="What if the god of this world is not the true God? A Gnostic reflection by Ninox Antolihao.">
-  <meta property="og:image" content="/reflections/pages/diety/diety.jpg">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <style>
+    :root{
+      --bg:#0e0e0f; --paper:#141415; --ink:#f1f1f1; --muted:#aaa; --accent:#ffb020; --rule:#252526;
+      --maxw: 860px; --fs: 18px; --lh: 1.8; --radius:16px;
+    }
+    @media (prefers-color-scheme: light){
+      :root{ --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d; --accent:#d93404; --rule:#e4c7b7; }
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;height:100%}
+    body{font-family: Georgia, ui-serif, serif; background:var(--bg); color:var(--ink); font-size:var(--fs); line-height:var(--lh)}
+    header{
+      position: sticky; top:0; z-index:10; background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.15));
+      backdrop-filter: blur(6px); border-bottom:1px solid var(--rule);
+    }
+    .wrap{max-width:var(--maxw); margin:0 auto; padding:12px 16px; display:flex; align-items:center; justify-content:space-between; gap:10px}
+    .back{color:var(--accent); text-decoration:none; font-weight:700}
+    .dl{border:1px solid var(--rule); border-radius:10px; padding:6px 10px; color:var(--ink); text-decoration:none}
+    main{padding: 18px 16px 60px}
+    article{
+      max-width:var(--maxw); margin:0 auto; background:var(--paper); border:1px solid var(--rule);
+      border-radius:var(--radius); padding:26px 22px; box-shadow:0 10px 30px rgba(0,0,0,.25)
+    }
+    h1{margin:0 0 6px; font-size:clamp(24px,5vw,38px)}
+    .meta{color:var(--muted); margin-bottom:16px}
+    h2{margin:20px 0 8px}
+    p{margin:10px 0}
+    blockquote{margin:14px 0; padding:12px 16px; border-left:4px solid var(--accent); background:rgba(255,176,32,.08); border-radius:10px}
+    .divider{ text-align:center; color:var(--muted); margin: 18px 0}
+    .divider span{padding:0 10px}
+    .small{font-size:14px; color:var(--muted)}
+    footer{max-width:var(--maxw); margin:0 auto; padding:18px 16px; color:var(--muted)}
+  </style>
 </head>
-
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
-    <h1>The Diety</h1>
-    <p class="meta">A Gnostic Reflection on the True Divine — Ninox Antolihao • First Edition 2025</p>
+    <div class="wrap">
+      <a class="back" href="/reflections/index.html">← Back to Reflections</a>
+      <a class="dl" href="./moments-of-solitude.pdf" download>Download PDF</a>
+    </div>
   </header>
 
-  <!-- 🎧 Audio Player (same folder, so just filename) -->
-  <script>
-    document.write(createAudioPlayer('diety.mp3', 'The False God — Audio Reflection'));
-  </script>
-
-  <main class="wrap">
-    <article>
+  <main>
+<article>
       <h2>Introduction</h2>
       <p>This reflection was born out of a question too powerful to ignore: If God is perfect, why does creation feel so flawed? Why does suffering seem woven into the very fabric of the world? And if the stories we were told do not match the world we experience... what then?</p>
       <p>In this short but potent reflection, we journey through one of the most provocative spiritual ideas in human history — that the god of this world is not the true God. This isn’t atheism. It’s not rebellion. It’s an ancient path of deeper remembering — one that leads not to destruction, but to awakening.</p>
@@ -64,17 +84,14 @@
       <p>And the real God? Was never far away. Never hidden in a temple. Never trapped in a book.</p>
       <p><strong>It was always inside you.</strong></p>
 
-      <hr>
-      <p style="text-align:center;">— ❖ —</p>
     </article>
   </main>
 
   <footer>
-    <a href="/reflections/index.html" class="btn secondary">← Back to Reflections</a><br>
-    © 2025 Ninox Antolihao · Stone Grill Press · All Rights Reserved
+    <div class="wrap" style="display:flex; text-align:left;">
+      <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
+    </div>
   </footer>
-
-  <!-- Omnibus Script -->
-  <script src="/reflections/assets/audio-system.js"></script>
+  
 </body>
 </html>
