--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -44,7 +44,7 @@
   <header>
     <div class="wrap">
       <a class="back" href="/reflections/index.html">← Back to Reflections</a>
-      <a class="dl" href="./moments-of-solitude.pdf" download>Download PDF</a>
+      <a class="dl" href="./The_False_God_Reflection_by_Ninox copy.pdf" download>Download PDF</a>
     </div>
   </header>
 
