--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -4,8 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>The Diety — Read</title>
-  <meta name="description" content="A quiet invitation to stillness and presence.">
+  <meta name="description" content="A Gnostic Reflection on the True Divine — by Ninox Antolihao">
   <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <!-- 🔗 Omnibus player + stylesheet -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <script src="/reflections/assets/audio-system.js"></script>
+
   <style>
     :root{
       --bg:#0e0e0f; --paper:#141415; --ink:#f1f1f1; --muted:#aaa; --accent:#ffb020; --rule:#252526;
@@ -40,6 +45,7 @@
     footer{max-width:var(--maxw); margin:0 auto; padding:18px 16px; color:var(--muted)}
   </style>
 </head>
+
 <body>
   <header>
     <div class="wrap">
@@ -48,10 +54,22 @@
     </div>
   </header>
 
+  <!-- 🎧 Audio Player (same folder) -->
+  <script>
+    document.write(createAudioPlayer('diety.mp3', 'The Diety — Audio Reflection'));
+  </script>
+
   <main>
-<article>
+    <article>
       <h2>Introduction</h2>
       <p>This reflection was born out of a question too powerful to ignore: If God is perfect, why does creation feel so flawed? Why does suffering seem woven into the very fabric of the world? And if the stories we were told do not match the world we experience... what then?</p>
+      <p>In this short but potent reflection, we journey through one of the most provocative spiritual ideas in human history — that the god of this world is not the true God. This isn’t atheism. It’s not rebellion. It’s an ancient path of deeper remembering — one that leads not to destruction, but to awakening.</p>
+      <p>You are not reading theology. You are holding a spark. May it light something within you.</p>
+
+      <hr>
+
+      <!-- (Your other reflection paragraphs remain the same here) -->
+            <p>This reflection was born out of a question too powerful to ignore: If God is perfect, why does creation feel so flawed? Why does suffering seem woven into the very fabric of the world? And if the stories we were told do not match the world we experience... what then?</p>
       <p>In this short but potent reflection, we journey through one of the most provocative spiritual ideas in human history — that the god of this world is not the true God. This isn’t atheism. It’s not rebellion. It’s an ancient path of deeper remembering — one that leads not to destruction, but to awakening.</p>
       <p>You are not reading theology. You are holding a spark. May it light something within you.</p>
 
@@ -76,6 +94,7 @@
       <p>This isn’t rebellion. It’s not blasphemy. It’s Gnosticism — an ancient voice whispering across time, saying: the god of this world is a copy, a pretender. And the true God is something deeper, quieter, and infinitely more loving.</p>
       <p>To the Gnostics, this lesser god was called the Demiurge — a being who created matter, enforced laws, and demanded worship. Jealous. Controlling. Often violent. The god of fear.</p>
       <p>But above him is the source. The true divine. Not a judge. Not a king. But light itself. Silence. Peace.</p>
+     
       <p>And that light lives in you.</p>
       <p>This world — this broken system — was never your true home. It was never meant to trap you, bind you, or shame you. The pain of this life is not punishment. It’s a signal. A tension pulling you back to remembrance.</p>
       <p>Even Jesus, to the Gnostics, was not a sacrificial lamb. He was a liberator. Not here to die for your sins, but to awaken you from illusion. To remind you of who you were before religion told you otherwise.</p>
@@ -92,6 +111,5 @@
       <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
     </div>
   </footer>
-  
 </body>
 </html>
