--- a/reflections/index.html
+++ b/reflections/index.html
@@ -10,6 +10,9 @@
 <meta property="og:image:width" content="240">
 <meta property="og:image:height" content="371">
 <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+<script src="/reflections/assets/audio-system.js"></script>
+
 
   <style>
   
