--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -89,13 +89,10 @@
 
   <a href="/reflections/index.html" class="back">← Back to Reflections</a>
 
-<!-- 🎧 Inline audio player -->
-<div class="audio-section" style="text-align:center; margin: 1.5em 0;">
-  <audio controls preload="none" style="width:90%; max-width:600px; border-radius:6px;">
-    <source src="/reflections/pages/the-god-we-created/the-god-we-create.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-</div>
+ <!-- 🎧 Audio Player (same folder) -->
+  <script>
+    document.write(createAudioPlayer('diety.mp3', 'The Diety — Audio Reflection'));
+  </script>
 
     <h2>About the Author</h2>
     <p>Ninox Antolihao is a seeker of truth, a writer of questions, and a student of the unseen. Rooted in both community life and contemplative solitude, he writes to explore the gaps between faith and fact, spirit and story, myth and meaning. His reflections are not written to teach—but to open doors. Each one invites the reader to look again, and to listen more closely. In a world clouded by noise, Ninox writes to rediscover clarity.</p>
