--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -9,7 +9,10 @@
   <meta property="og:description" content="A reflection that challenges the idea of a human-shaped God and invites the reader toward inner awakening.">
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-god-we-created/thegodwecreate.png">
   <link rel="icon" href="/reflections/assets/favicon.ico">
-
+  <!-- 🔗 Omnibus player + stylesheet -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <script src="/reflections/assets/audio-system.js"></script>
+  
   <style>
     body {
       background: #1f1815;
@@ -91,7 +94,7 @@
 
  <!-- 🎧 Audio Player (same folder) -->
   <script>
-    document.write(createAudioPlayer('diety.mp3', 'The Diety — Audio Reflection'));
+    document.write(createAudioPlayer('the-god-we-create.mp3', 'The God we Create — Audio'));
   </script>
 
     <h2>About the Author</h2>
