--- a/reflections/index.html
+++ b/reflections/index.html
@@ -143,7 +143,7 @@
     <script>
       document.write(createAudioPlayer(
         '/reflections/pages/diety/diety.mp3',
-        'The God We Created'
+        'Diety'
       ));
     </script>
 
@@ -234,7 +234,7 @@
     <script>
       document.write(createAudioPlayer(
         '/reflections/pages/the-god-we-created/the-god-we-create.mp3',
-        'The God We Created'
+        ''
       ));
     </script>
     
