--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -6,6 +6,10 @@
   <title>Belief and Goodness — Ninox Antolihao</title>
   <meta name="description" content="Belief is awareness, not alignment. Goodness is the direction of the heart. A reflection by Ninox Antolihao." />
 
+  <!-- 🔗 Omnibus player + stylesheet -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <script src="/reflections/assets/audio-system.js"></script>
+
   <!-- Canonical -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/belief/index.html" />
 
