--- a/reflections/index.html
+++ b/reflections/index.html
@@ -289,11 +289,13 @@
             <a class="btn" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">Read</a>
             <a class="btn secondary" href="/reflections/pages/belief/belief.pdf">Download</a>
           </div>
-          <!-- 🎧 Audio Player (same folder) -->
-  <script>
-    document.write(createAudioPlayer('belief.mp3', 'Belief — Audio'));
-  </script>
-
+          
+    <!-- 🎧 Audio Player (same folder) -->
+            <div>
+             <script>
+               document.write(createAudioPlayer('belief.mp3', 'Belief — Audio'));
+            </script>
+          </div>
         </div>
       </article>
       
