--- a/reflections/index.html
+++ b/reflections/index.html
@@ -218,7 +218,7 @@
     <!-- 🎧 Audio Player (same folder) -->
             <div>
              <script>
-               document.write(createAudioPlayer('beliefxgood.mp3', 'Belief — Audio'));
+               document.write(createAudioPlayer('/reflections/pages/belief/beliefxgood.mp3', 'Belief — Audio'));
             </script>
           </div>
         </div>
