--- a/reflections/index.html
+++ b/reflections/index.html
@@ -124,11 +124,11 @@
 
   <div class="right">
     <h3>
-      <a class="title-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">
-      </a>
+      <a class="title-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener"></a>
+      
     </h3>
 
-    <p>Reflection on the True Divine?</p>
+    <p>Reflection on the True Divine - What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love</p>
 
     <div class="meta">
       First Edition 2025 • 
