--- a/reflections/index.html
+++ b/reflections/index.html
@@ -71,15 +71,15 @@
 
     /* Right side */
     .right{min-width:0}
-    .right h3{margin:0 0 6px;font-size:1rem;line-height:1;}
+    .right h3{margin:0 0 6px;font-size:1rem;line-height:1.1;}
     .title-link{color:inherit;text-decoration:none}
     .title-link:hover{text-decoration:underline}
     .right p{margin:4px 0 8px;color:var(--muted);font-size:.90rem;}
     .meta{font-size:.85rem;color:var(--muted)}
 
     /* Buttons */
-    .cover-actions{margin-top:10px;display:flex;gap:8px;flex-wrap:wrap;justify-content:flex-start}
-    .btn{background:var(--accent);color:#fff;text-decoration:none;padding:5px 8px;border-radius:8px;font-weight:600;font-size:10px;transition:filter .15s ease;}
+    .cover-actions{margin-top:5px;display:flex;gap:8px;flex-wrap:wrap;justify-content:flex-start}
+    .btn{background:var(--accent);color:#fff;text-decoration:none;padding:5px 8px;border-radius:6px;font-weight:600;font-size:10px;transition:filter .15s ease;}
     .btn:hover{filter:brightness(.95)}
     .btn.secondary{background:#a94a1e}
 
@@ -217,7 +217,7 @@
     <!-- 🎧 Audio Player (same folder) -->
             <div>
              <script>
-               document.write(createAudioPlayer('/reflections/pages/belief/beliefxgood.mp3', 'Belief — Audio'));
+               document.write(createAudioPlayer('/reflections/pages/belief/beliefxgood.mp3', 'Belief'));
             </script>
           </div>
         </div>
