--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -68,14 +68,6 @@
 
       <hr>
 
-      <!-- (Your other reflection paragraphs remain the same here) -->
-            <p>This reflection was born out of a question too powerful to ignore: If God is perfect, why does creation feel so flawed? Why does suffering seem woven into the very fabric of the world? And if the stories we were told do not match the world we experience... what then?</p>
-      <p>In this short but potent reflection, we journey through one of the most provocative spiritual ideas in human history — that the god of this world is not the true God. This isn’t atheism. It’s not rebellion. It’s an ancient path of deeper remembering — one that leads not to destruction, but to awakening.</p>
-      <p>You are not reading theology. You are holding a spark. May it light something within you.</p>
-
-      <hr>
-
-      <h2>The Reflection</h2>
       <p>Imagine, for a moment, that everything we were told about God… was only half the story.</p>
       <p>That the creator of this world — with its wars, its cancers, its cruelty, and its systems of power — is not the ultimate source of goodness… but a flawed architect. One who believes himself to be God, but isn’t.</p>
       <p>This idea isn’t new. It comes from ancient seekers, the Gnostics — spiritual thinkers from the early centuries after Jesus. They saw something others didn’t: that the god who demands, punishes, and divides isn’t the true divine — but the Demiurge, a being obsessed with control, law, and worship.</p>
@@ -88,7 +80,6 @@
 
       <hr>
 
-      <h2>Reflection</h2>
       <p>What if everything we were told about God… was only half the story?</p>
       <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love, but a flawed architect? One who believes himself to be God… but isn’t.</p>
       <p>This isn’t rebellion. It’s not blasphemy. It’s Gnosticism — an ancient voice whispering across time, saying: the god of this world is a copy, a pretender. And the true God is something deeper, quieter, and infinitely more loving.</p>
@@ -102,6 +93,12 @@
       <p>And maybe — just maybe — the God you were taught to fear… was never the true God at all.</p>
       <p>And the real God? Was never far away. Never hidden in a temple. Never trapped in a book.</p>
       <p><strong>It was always inside you.</strong></p>
+
+      <h3>ABOUT THE AUTHOR</h3>
+      <p><strong>Ninox Antolihao</strong> is a Filipino thinker and writer exploring the meeting point of spirituality, science, and self-awareness. His reflections seek to awaken understanding rather than belief, reminding readers that truth is not owned but realized.</p>
+      <p>Through Stone Grill Press, he shares reflections that weave philosophy, psychology, and lived experience into one voice--gentle yet clear--urging humanity to rediscover the unity beneath apparent separation.</p>
+
+      <blockquote>"It was always inside you." -- Ninox Antolihao</blockquote>
 
     </article>
   </main>
