--- a/reflections/pages/moments-of-solitude/read.html
+++ b/reflections/pages/moments-of-solitude/read.html
@@ -57,25 +57,25 @@
 
       <div class="divider"><span>— ❖ —</span></div>
 
-      <h2>I. The Door That Doesn’t Knock</h2>
+      <h2>^</h2>
       <p>Solitude rarely announces itself. It doesn’t send an invitation or clear your calendar. It arrives in the spaces between errands, in the pause after a hard sentence, in the quiet that follows celebration. If you walk past it, nothing seems lost. If you step inside, the room keeps expanding.</p>
       <p>In solitude, the world returns your name without a title. No roles to perform, no expectations to juggle. Just the original you—still, ordinary, awake. You begin to notice that attention is a kind of love. Where it rests, life grows.</p>
 
-      <h2>II. The Weight of Noise</h2>
+      <h3>The Weight of Noise</h3>
       <p>Noise is not only sound. It is the constant tug to be elsewhere: the comparison, the urgency, the glitter that ages badly. Noise makes the present feel insufficient, and that is how we become strangers to our own breath.</p>
       <p>Silence is not the absence of sound; it is the reordering of value. In silence, ordinary things regain their dignity—the kettle, the chair, the hand on the table. You see how many meanings were borrowed, and how many you can return.</p>
 
       <blockquote>“When we stop rushing, time remembers its true size.”</blockquote>
 
-      <h2>III. Learning the Pace of Enough</h2>
+      <h3>Learning the Pace of Enough</h3>
       <p>We chase completion as if life were a checklist. Yet every arrival simply teaches a better kind of beginning. Solitude does not make you smaller; it gives the soul room to stretch. It replaces ambition’s fever with craft’s devotion.</p>
       <p>There is a pace that belongs to you. Not the slow of fear nor the speed of panic—the honest cadence where attention and action keep each other company. When you walk at that pace, decisions become simpler: does this deepen my life or only decorate it?</p>
 
-      <h2>IV. The Work of Gentle Courage</h2>
+      <h2>The Work of Gentle Courage</h2>
       <p>Solitude asks for courage, but not the kind that shouts. The brave thing is to tell the truth: this hurts; this matters; this no longer fits. In quiet, the truth stops threatening you. It becomes a tool you can hold without bleeding.</p>
       <p>Then the smallest acts become decisive—closing a tab and opening a window, putting the phone down and picking the book up, saying no with a blessing. You honor what you love by the attention you are willing to give it.</p>
 
-      <h2>V. Returning With Light</h2>
+      <h3>Returning With Light</h3>
       <p>Do not stay hidden forever. Solitude is not an island to own; it is a shore to visit until your feet remember how to stand. You go there to hold your life to the light and then you bring that light back—to your people, your projects, your street.</p>
       <p>When you return, you carry a quieter strength. Not certainty, but steadiness. Not answers, but good questions. And the day, which was crowded a moment ago, becomes spacious enough for gratitude.</p>
 
