--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -66,7 +66,7 @@
       <p>In this short but potent reflection, we journey through one of the most provocative spiritual ideas in human history — that the god of this world is not the true God. This isn’t atheism. It’s not rebellion. It’s an ancient path of deeper remembering — one that leads not to destruction, but to awakening.</p>
       <p>You are not reading theology. You are holding a spark. May it light something within you.</p>
 
-      <hr>
+      <div class="divider"><span>—--- ❖ ---—</span></div>
 
       <p>Imagine, for a moment, that everything we were told about God… was only half the story.</p>
       <p>That the creator of this world — with its wars, its cancers, its cruelty, and its systems of power — is not the ultimate source of goodness… but a flawed architect. One who believes himself to be God, but isn’t.</p>
@@ -78,14 +78,14 @@
       <p>And maybe that’s why the system still fights doubt today. Because when you start to ask the real questions — about suffering, control, punishment, and power — the story starts to unravel. And what you’re left with… is a quiet truth, buried under centuries of noise.</p>
       <p>That the true God was never in the sky, or the book, or the threat. The true God is the light you carry. And waking up to it… is the beginning of freedom.</p>
 
-      <hr>
+     <div class="divider"><span>—--- ❖ ---—</span></div>
 
       <p>What if everything we were told about God… was only half the story?</p>
       <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love, but a flawed architect? One who believes himself to be God… but isn’t.</p>
       <p>This isn’t rebellion. It’s not blasphemy. It’s Gnosticism — an ancient voice whispering across time, saying: the god of this world is a copy, a pretender. And the true God is something deeper, quieter, and infinitely more loving.</p>
       <p>To the Gnostics, this lesser god was called the Demiurge — a being who created matter, enforced laws, and demanded worship. Jealous. Controlling. Often violent. The god of fear.</p>
       <p>But above him is the source. The true divine. Not a judge. Not a king. But light itself. Silence. Peace.</p>
-     
+
       <p>And that light lives in you.</p>
       <p>This world — this broken system — was never your true home. It was never meant to trap you, bind you, or shame you. The pain of this life is not punishment. It’s a signal. A tension pulling you back to remembrance.</p>
       <p>Even Jesus, to the Gnostics, was not a sacrificial lamb. He was a liberator. Not here to die for your sins, but to awaken you from illusion. To remind you of who you were before religion told you otherwise.</p>
@@ -93,6 +93,8 @@
       <p>And maybe — just maybe — the God you were taught to fear… was never the true God at all.</p>
       <p>And the real God? Was never far away. Never hidden in a temple. Never trapped in a book.</p>
       <p><strong>It was always inside you.</strong></p>
+
+      <div class="divider"><span>—--- ❖ ---—</span></div>
 
       <h3>ABOUT THE AUTHOR</h3>
       <p><strong>Ninox Antolihao</strong> is a Filipino thinker and writer exploring the meeting point of spirituality, science, and self-awareness. His reflections seek to awaken understanding rather than belief, reminding readers that truth is not owned but realized.</p>
