--- a/reflections/index.html
+++ b/reflections/index.html
@@ -276,7 +276,8 @@
           <div class="cover-actions">
             <a class="btn" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">Read</a>
             <a class="btn secondary" href="/reflections/pages/belief/belief.pdf">Download</a>
-            <button class="btn share" type="button" onclick="shareToFacebook('/reflections/pages/belief/index.html')">Share</button>
+            <button class="btn fb" onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/belief/read.html')">Facebook</button>
+<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/belirf/read.html')">Messenger</button>
           </div>
 
           <!-- 🎧 Audio -->
