--- a/reflections/index.html
+++ b/reflections/index.html
@@ -233,7 +233,8 @@
           <div class="cover-actions">
             <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
             <button class="btn secondary" onclick="toggleAudio && toggleAudio(this)">Listen</button>
-            <button class="btn share" type="button" onclick="shareToFacebook('/reflections/pages/the-god-we-created/read.html')">Share</button>
+             <button class="btn fb" onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">Facebook</button>
+<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">Messenger</button>
           </div>
 
           <!-- 🎧 Audio -->
@@ -277,7 +278,7 @@
             <a class="btn" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">Read</a>
             <a class="btn secondary" href="/reflections/pages/belief/belief.pdf">Download</a>
             <button class="btn fb" onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/belief/index.html')">Facebook</button>
-<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/belirf/index.html')">Messenger</button>
+<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/belief/index.html')">Messenger</button>
           </div>
 
           <!-- 🎧 Audio -->
