--- a/reflections/index.html
+++ b/reflections/index.html
@@ -230,11 +230,15 @@
             <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf">PDF</a>
           </div>
 
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/the-god-we-created/read.html" target="_blank" rel="noopener">Read</a>
-            <button class="btn secondary" onclick="toggleAudio && toggleAudio(this)">Listen</button>
-             <button class="btn fb" onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">Facebook</button>
-<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">Messenger</button>
+          <button class="btn fb"
+  onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">
+  Facebook
+</button>
+
+<button class="btn msg"
+  onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html')">
+  Messenger
+</button>
           </div>
 
           <!-- 🎧 Audio -->
@@ -508,5 +512,41 @@
     © 2025 Stone Grill Restaurant ·
     <a href="tel:0535680539">Call 053 568 0539</a>
   </footer>
+  <!-- ===== SHARE HELPERS (place once, before </body>) ===== -->
+<script>
+  // Open a centered popup
+  function openPopup(url, w, h){
+    const y = window.top.outerHeight / 2 + window.top.screenY - ( h / 2 );
+    const x = window.top.outerWidth  / 2 + window.top.screenX - ( w / 2 );
+    window.open(url, '_blank',
+      `width=${w},height=${h},left=${x},top=${y},noopener,noreferrer`);
+  }
+
+  // Facebook share
+  function shareToFacebook(url){
+    const u = 'https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(url);
+    openPopup(u, 680, 560);
+  }
+
+  // Messenger share
+  function shareToMessenger(url){
+    // Your live App ID (from your memory)
+    const APP_ID = '2895055444086567';
+    // Redirect back to current page after send
+    const redirect = window.location.href;
+
+    // Try native Web Share on mobile as a friendly fallback
+    if (navigator.share) {
+      navigator.share({ title: document.title, url }).catch(()=>{});
+      return;
+    }
+
+    const u = 'https://www.facebook.com/dialog/send?' +
+      'link=' + encodeURIComponent(url) +
+      '&app_id=' + APP_ID +
+      '&redirect_uri=' + encodeURIComponent(redirect);
+    openPopup(u, 680, 560);
+  }
+</script>
 </body>
 </html>
