--- a/reflections/index.html
+++ b/reflections/index.html
@@ -190,6 +190,8 @@
             <a class="btn" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">Read</a>
             <a class="btn secondary" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf">Download</a>
             <!-- Facebook Share (shares the Read URL) -->
+            <button class="btn fb" onclick="shareToFacebook('https://stonegrillresto.net/reflections/pages/diety/read.html')">Facebook</button>
+<button class="btn msg" onclick="shareToMessenger('https://stonegrillresto.net/reflections/pages/diety/read.html')">Messenger</button>
             <button class="btn share" type="button" onclick="shareToFacebook('/reflections/pages/diety/read.html')">Share</button>
           </div>
 
