--- a/reflections/pages/between-nothing-and-space/read.html
+++ b/reflections/pages/between-nothing-and-space/read.html
@@ -88,6 +88,16 @@
       background: rgba(255,255,255,.03);
       font-style: italic;
     }
+    .back-button a {
+  background: #ff6b3d;      /* 🔸 Bright orange background */
+  color: #ffffff;            /* 🔸 White font */
+  text-decoration: none;
+  font-weight: 600;
+  padding: 10px 24px;
+  border-radius: 8px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+  transition: all 0.3s ease;
+}
 
     .rule{
       display:flex; align-items:center; gap:.75rem;
