--- a/reflections/pages/question-label-sinner/read.html
+++ b/reflections/pages/question-label-sinner/read.html
@@ -91,14 +91,14 @@
 <body>
 
     <div class="container">
-        <div class="reflection-cover">
+        <div class="/reflections/pages/question-label-sinner/label-sinner.jpeg">
             Placeholder for Reflection Image/Cover
             </div>
 
         <div class="audio-player">
             <p style="margin-top:0; font-size: 0.9em; color: #666;">Listen to the reading:</p>
             <audio controls style="width: 100%;">
-                <source src="tts_recording.mp3" type="audio/mpeg">
+                <source src="labeled-sinner.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
