--- a/reflections/index.html
+++ b/reflections/index.html
@@ -290,6 +290,54 @@
       </article>
 
       <!-- =========================================
+           CARD: When labeled SINNER
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/question-label-sinner/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/question-label-sinner/label-sinner.jpeg"
+                 alt="diety cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/question-label-sinner/read.html" target="_blank" rel="noopener">the diety</a></h3>
+          <p>When Seeking Assurance is Labeled as Sin.</p>
+          <div class="meta">
+            First Edition 2025 • 
+            <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf">PDF</a>
+          </div>
+
+          <div class="cover-actions">
+            <!-- LEFT: Share -->
+            <div class="share-group">
+              <a class="btn fb"
+                 data-url="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html"
+                 href="https://www.facebook.com/sharer/sharer.php?u=http://stonegrillresto.net/reflections/pages/question-label-sinner/read.html"
+                 target="_blank" rel="noopener">Facebook</a>
+              <a class="btn msg"
+                 data-url="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html"
+                 href="https://www.facebook.com/dialog/send?link=http://stonegrillresto.net/reflections/pages/question-label-sinner/read.html&app_id=2895055444086567&redirect_uri=https%3A%2F%2Fstonegrillresto.net%2Freflections%2F"
+                 target="_blank" rel="noopener">Messenger</a>
+            </div>
+            <!-- RIGHT: Actions -->
+            <div class="action-group">
+              <a class="btn read" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">Read</a>
+              <a class="btn down" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf">Download</a>
+              <button class="btn listen" onclick="document.querySelector('audio').play()">Listen</button>
+            </div>
+          </div>
+
+          <!-- 🎧 Audio -->
+          <script>
+            document.write(createAudioPlayer('/reflections/pages/diety/labeled-sinner.mp3', 'labeled sinner'));
+          </script>
+        </div>
+      </article>
+      
+      <!-- =========================================
            CARD: MOMENTS OF SOLITUDE
            ========================================= -->
       <article class="card">
