--- a/reflections/index.html
+++ b/reflections/index.html
@@ -303,7 +303,7 @@
         </div>
 
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/question-label-sinner/read.html" target="_blank" rel="noopener">the diety</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/question-label-sinner/read.html" target="_blank" rel="noopener">labeled sinner</a></h3>
           <p>When Seeking Assurance is Labeled as Sin.</p>
           <div class="meta">
             First Edition 2025 • 
@@ -332,7 +332,7 @@
 
           <!-- 🎧 Audio -->
           <script>
-            document.write(createAudioPlayer('/reflections/pages/diety/labeled-sinner.mp3', 'labeled sinner'));
+            document.write(createAudioPlayer('/reflections/pages/question-label-sinner/labeled-sinner.mp3', 'labeled sinner'));
           </script>
         </div>
       </article>
