--- a/reflections/index.html
+++ b/reflections/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Solitude Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="icon" href="/assets/favicon.ico">
 
   <!-- Social preview -->
   <meta property="og:image" content="https://stonegrillresto.net/reflections/Untitled.png">
