--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:title" content="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
   <meta property="og:description" content="The journey from transcendence to Absolute Reality — a reflection by Ninox Antolihao.">
-  <meta property="og:image" content="/reflections/pages/transcendence/cover.jpg">
+  <meta property="og:image" content="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <style>
@@ -116,8 +116,8 @@
   <!-- ===== Header ===== -->
   <header>
     <div class="mast">
-      <a href="/reflections/pages/transcendence/cover.jpg" target="_blank" rel="noopener">
-        <img class="cover" src="/reflections/pages/transcendence/cover.jpg" alt="TRANSCENDENCE cover">
+      <a href="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png" target="_blank" rel="noopener">
+        <img class="cover" src="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png" alt="TRANSCENDENCE cover">
       </a>
       <div class="titles">
         <h1>TRANSCENDENCE</h1>
@@ -144,7 +144,7 @@
     <a class="btn" href="/reflections/index.html">← Back to Reflections</a>
     <div style="display:flex;gap:10px;flex-wrap:wrap">
       <a class="btn" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener">📄 Download PDF</a>
-      <a class="btn" href="/reflections/pages/transcendence/cover.jpg" target="_blank" rel="noopener">🖼️ View Cover</a>
+      <a class="btn" href="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png" target="_blank" rel="noopener">🖼️ View Cover</a>
     </div>
   </nav>
 
