--- a/reflections/index.html
+++ b/reflections/index.html
@@ -245,6 +245,51 @@
       </article>
 
       <!-- =========================================
+           CARD: TRANSCENDENCE
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/transcendence/transcendence.png"
+                 alt="transcendence cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">
+              Belief and Goodness</a></h3>
+          <p>Belief shows awareness of the light, but goodness is walking toward it.</p>
+          <div class="meta">First Edition 2025 • Essay ·
+            <a class="title-link" href="/reflections/pages/transcendence/transcendence.pdf">PDF</a>
+          </div>
+
+          <div class="cover-actions">
+            <!-- LEFT: Share -->
+            <div class="share-group">
+              <a class="btn fb"
+                 data-url="https://stonegrillresto.net/reflections/pages/transcendence/index.html"
+                 href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Ftranscendence%2Findex.html"
+                 target="_blank" rel="noopener">Facebook</a>
+              <a class="btn msg"
+                 data-url="https://stonegrillresto.net/reflections/pages/transcendence/index.html"
+                 href="https://www.facebook.com/dialog/send?link=https%3A%2F%2Fstonegrillresto.net%2Freflections%2Fpages%2Fbelief%2Findex.html&app_id=2895055444086567&redirect_uri=https%3A%2F%2Fstonegrillresto.net%2Freflections%2F"
+                 target="_blank" rel="noopener">Messenger</a>
+            </div>
+            <!-- RIGHT: Actions -->
+            <div class="action-group">
+              <a class="btn read" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">Read</a>
+              <a class="btn down" href="/reflections/pages/transcendence/transcendence.pdf">Download</a>
+              <script>
+                document.write(createAudioPlayer('/reflections/pages/transcendence/transcendence.mp3', 'transcendence'));
+              </script>
+            </div>
+          </div>
+        </div>
+      </article>
+      
+      <!-- =========================================
            CARD: BELIEF AND GOODNESS
            ========================================= -->
       <article class="card">
