--- a/reflections/index.html
+++ b/reflections/index.html
@@ -251,7 +251,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/transcendence/transcendence.png"
+                 src="/reflections/pages/transcendence/b1c99ba7-45d4-45cf-acf6-bc78b2edd891.png"
                  alt="transcendence cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
@@ -259,8 +259,8 @@
 
         <div class="right">
           <h3><a class="title-link" href="/reflections/pages/transcendence/index.html" target="_blank" rel="noopener">
-              Belief and Goodness</a></h3>
-          <p>Belief shows awareness of the light, but goodness is walking toward it.</p>
+              TRANSCENDENCE</a></h3>
+          <p>Unraveling the Enigma of Absolute Truth</p>
           <div class="meta">First Edition 2025 • Essay ·
             <a class="title-link" href="/reflections/pages/transcendence/transcendence.pdf">PDF</a>
           </div>
